CMP-228 Introduce Path interface to save memory